<resources>
    <string name="app_name">iNews</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="entertainment">Entertainment</string>
    <string name="filter_by">Filter By</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="everything">Everything</string>
    <string name="retry">Retry</string>
    <string name="todo">TODO</string>
    <string name="place_holder_source">inews.com</string>
    <string name="about">About</string>
    <string name="msg_error">Something went wrong, check Wifi/internet connection</string>
    <string name="developer_name">Sphelele Micah Ngubane</string>
    <string name="developer"><u>{ Developer }</u></string>
    <string name="close">Close</string>
    <string name="covid_19_stats">Covid-19 Stats</string>
    <string name="covid_19_statistics">Covid 19 Statistics</string>
    <string name="covid_19_cases_confirmed"># Confirmed Cases</string>
    <string name="covid_19_active_cases"># Active Cases</string>
    <string name="critical_cases"># Critical Cases</string>
    <string name="covid_19_deaths"># Total Deaths</string>
    <string name="total_recovered"># Total Recovered</string>
    <string name="dummy_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a erat tellus. Curabitur hendrerit justo id justo placerat, sed semper nisi lacinia. Curabitur id mattis ligula, eget pellentesque ex."</string>
    <string name="read_more">Read More</string>
    <string name="message">Contact Sphelele on these platforms</string>
    <string name="url_github">https://github.com/MicahSphelele</string>
    <string name="url_linkedin">https://www.linkedin.com/in/sphelele-ngubane-3b2a84123</string>
    <string name="url_gmail">sphemicah@gmail.com</string>
    <string name="url_instagram">https://www.instagram.com/sphelele_micah_ngubane/?hl=en</string>
    <string name="txt_filter">Filter</string>
    <string name="select_country">Select Country</string>
    <string name="txt_ui_mode">UI Theme</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">App Theme</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_mode_title">Choose a theme mode</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="network_not_available">Network not available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_bookmarks">Bookmarks</string>
    <string name="app_filter">Filter</string>
    <string name="weather">Weather</string>
    <string name="txt_allow">Allow</string>
    <string name="txt_deny">Deny</string>
    <string name="txt_permission_required">Permission Required</string>
    <string name="msg_gps_access_denied">GPS access denied</string>
    <string name="msg_connect_to_wifi">Connect to Wifi/internet</string>
    <string name="title_select_theme">Select Theme</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_cancel">CANCEL</string>
    <string name="powered_by">Powered By</string>
</resources>
