<resources>
    <!-- Reply Preference -->
    <string-array name="theme_modes">
        <item>Light Mode</item>
        <item>Dark Mode</item>
        <item>System Default</item>
    </string-array>

    <string-array name="theme_mode_values">
        <item>light</item>
        <item>dark</item>
        <item>system_default</item>
    </string-array>
</resources>