...
        android:layout_height="match_parent"
        android:id="@+id/mainParentLayout"
        android:background="?attr/mainBackgroundColor"
        tools:context=".presentation.ui.activities.MainActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appToolbar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorTransparent"
            android:minHeight="?attr/actionBarSize"
            android:fitsSystemWindows="true"
...
            android:id="@+id/navigationHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:name="androidx.navigation.fragment.NavHostFragment"
            app:navGraph="@navigation/app_nav"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@+id/appBottomNavigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appToolbar"/>


        <com.google.android.material.bottomnavigation.BottomNavigationView
...
